# eu-ai-act-compliance-kit

./: .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  ROADMAP.md  STRUCTURE.md  action.yml  mkdocs.yml  pyproject.toml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml  maintenance-weekly.yml  ops-closeout-daily.yml  release.yml
.pre-commit-cache/: db.db
config/: collaboration_gate_policy.yaml  export_ops_gate_policy.yaml  governance_handoff_policy.yaml  ops_closeout_policy.yaml
docs/: adoption_evidence_template.md  api-reference.md  cli-reference.md  custom-systems.md  eu-ai-act-guide.md  examples.md  index.md  installation.md  launch_evidence_v0_1_0.md  launch_post.md  quickstart.md
examples/: chatbot.yaml  gpai_model.yaml  gpai_model_low_risk.yaml  gpai_model_unknown_thresholds.yaml  hiring_tool.yaml  medical_diagnosis.yaml  public_benefits_triage.yaml  social_scoring.yaml  spam_filter.yaml  synthetic_media_campaign_assistant.yaml
scripts/: prepush_gate.py  quickstart_smoke.sh
src/eu_ai_act/: __init__.py  articles.py  checker.py  checklist.py  classifier.py  cli.py  collaboration.py  collaboration_gate.py  dashboard.py  export_ops_gate.py  exporter.py  governance_handoff.py  gpai.py  history.py  ops_closeout.py  reporter.py  schema.py  security_gate.py  security_mapping.py  transparency.py
tests/: __init__.py  conftest.py  test_checker.py  test_checklist.py  test_ci_contract.py  test_classifier.py  test_cli.py  test_collaboration.py  test_collaboration_gate.py  test_dashboard.py  test_examples_contract.py  test_export_ledger.py  test_export_ops_gate.py  test_exporter.py  test_governance_handoff.py  test_gpai.py  test_history.py  test_ops_closeout.py  test_prepush_gate.py  test_quickstart_smoke.py  test_reporter.py  test_schema.py  test_security_gate.py  test_security_mapping.py  test_transparency.py
